--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tyt",
   "version": "1.0.0",
-  "description": "To Youtube",  
+  "description": "To Youtube",
   "main": "main.js",
   "productName": "TyT - To Youtube",
   "author": "Yali",
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-squirrel": "^7.4.0",
-    "electron": "^31.0.0"
+    "@electron-forge/maker-zip": "^7.9.0",
+    "electron": "^31.0.0",
+    "electron-prebuilt-compile": "^8.2.0"
   },
   "config": {
     "forge": {
@@ -25,7 +27,9 @@
       "makers": [
         {
           "name": "@electron-forge/maker-zip",
-          "platforms": ["win32"]
+          "platforms": [
+            "win32"
+          ]
         }
       ]
     }
